--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,13 +16,10 @@ repos:
   hooks:
   - id: reorder-python-imports
     name: Reorder imports
-- repo: https://github.com/PyCQA/flake8
-  rev: '6.0.0'
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: 'v0.0.191'
   hooks:
-  - id: flake8
-    name: Run flake8
-    args: ["--ignore=E501,W503"]
-    language_version: python3
+  - id: ruff
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.991
   hooks:
