--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ weii = "weii.cli:cli"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project.scripts]
+weii = "weii:cli"
