--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.8,<4"
 
+[project.scripts]
+weii = "weii.cli:cli"
+
 [tool.poetry.dependencies]
 evdev = "^1.6.1"
 
@@ -18,6 +21,3 @@ weii = "weii.cli:cli"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[project.scripts]
-weii = "weii:cli"
